move to new components folder

--- a/client/components/xyzApp/icon-of-provider.html
+++ b/client/components/xyzApp/icon-of-provider.html
@@ -1,5 +1,4 @@
 <div class="service-logo">
   <img ng-src="{{imageSource}}"
-      ng-attr-alt="link to {{iconOfProvider}}">
-  </img>
+      ng-attr-alt="link to {{iconOfProvider}}"/>
 </div>
