disable selecting icons

--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -119,6 +119,9 @@
   color: white;
 }
 
+.material-icons::-moz-selection { background:transparent; }
+.material-icons::selection { background:transparent; }
+
 .sidebar-container {
 
   background: $sidebar-background-color;
