--- a/admin/admin-style.css
+++ b/admin/admin-style.css
@@ -1,3 +1,9 @@
 body {
-    background-color:beige;
+    background-color: #ffdea0;
+    min-height: 100%;
+}
+
+
+.admin-app{
+    padding:1.5em;
 }
