--- a/client/views/base.html
+++ b/client/views/base.html
@@ -1,4 +1,3 @@
-
 <div ui-view="bar"></div>
 <div class="base-container">
 
@@ -8,15 +7,14 @@
   </md-progress-linear>
 
 
-  <toast> </toast>
+  <toast></toast>
   <div ui-view="main" class="main-container"></div>
 
-  <div ui-view="sidebar" >
-  </div>
 
-  <div class="xyz-player-container"
+  <div class="xyz-player-container room-for-sidebar"
        ng-controller="SiteWidePlayerCtrl"
-       ng-if="UserSettings.get('sitewide-player-enabled')">
+       ng-if="UserSettings.get('sitewide-player-enabled')"
+  >
     <div xyz-player
          data-space-name="getPlayingSpace().name"
          ng-show="getPlayingSpace()">
