--- a/client/views/signup.html
+++ b/client/views/signup.html
@@ -12,7 +12,7 @@
              ng-minlength="6"
              required><br/>
       <md-checkbox id="register-email-opt-in" name="email-opt-in" ng-model="registerData.emailOptIn" >
-        Send me email about the platform
+        Sign me up for the mailing list
       </md-checkbox>
 
       <input type="submit" value="submit"/>
