--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -18,14 +18,6 @@
   }
 }
 
-.icon {
-  cursor: default;
-}
-
-.icon-btn {
-  cursor: pointer;
-}
-
 .icon-btn:hover {
   color: $link-hover-color;
 }
@@ -119,8 +111,36 @@
   color: white;
 }
 
-.material-icons::-moz-selection { background:transparent; }
-.material-icons::selection { background:transparent; }
+.bar-title, .media-controls, .material-icons {
+
+  cursor: default;
+  * {
+    cursor: default;
+  }
+  * &::-moz-selection {
+    background: transparent;
+  }
+
+  * &::selection {
+    background: transparent;
+  }
+
+  &::-moz-selection {
+    background: transparent;
+  }
+  &::selection {
+    background: transparent;
+  }
+
+}
+
+.icon {
+  cursor: default;
+}
+
+.icon-btn {
+  cursor: pointer;
+}
 
 .sidebar-container {
 
