close expanded items if clicking outside space square

--- a/client/views/base.html
+++ b/client/views/base.html
@@ -8,7 +8,7 @@
 
 
   <toast></toast>
-  <div ui-view="main" class="main-container"></div>
+   <div ui-view="main" class="main-container" ng-click="onMainClick($event)"></div>
 
 
   <div class="xyz-player-container room-for-sidebar"
