kill more annoying highlighting

--- a/client/scss/_colors.scss
+++ b/client/scss/_colors.scss
@@ -111,7 +111,7 @@
   color: white;
 }
 
-.bar-title, .media-controls, .material-icons {
+#bar-title, #bar-logo img, .media-controls, .material-icons, .bar-icons {
 
   cursor: default;
   * {
