#171 done (clicks outside elements to hide them)

--- a/client/views/space.html
+++ b/client/views/space.html
@@ -112,7 +112,7 @@ class="item-hover" ng-style="getHovering().css">
 </div>
 
 
-<div ui-view="sidebar">
+<div ui-view="sidebar" ng-click="$event.stopPropagation()">
 </div>
 
 <debug
