--- a/client/views/landing.html
+++ b/client/views/landing.html
@@ -4,7 +4,7 @@
 <section ng-if="User.loggedIn()" >
   <h2>My Spaces</h2>
 
-  <a id="create-new-space" ng-click="createNewSpace()"> + create new space</a>
+  <h1><a id="create-new-space" ng-click="createNewSpace()"> + create new space</a></h1>
 
   <h2 ng-if="User.hasOwnSpaces() || User.hasEditableSpaces()">my spaces:</h2>
 
