--- a/client/scss/base/_base.scss
+++ b/client/scss/base/_base.scss
@@ -8,6 +8,11 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
+body {
+    background-color:black;
+  
+}
+
 html {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
